# forecasting-agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
src/: agent.py  memory_manager.py  ollama_manager.py  tools_manager.py
